--- a/root/templates/admin/subscription.html
+++ b/root/templates/admin/subscription.html
@@ -188,7 +188,7 @@
                                 <div class="row justify-content-end mb-4">
                                     <div class="col-sm">
                                         {{ form.add(class='btn btn-sm btn-info rounded-pill') }}
-                                        {{ form.fin(class='btn btn-sm btn-success rounded-pill') }}
+{#                                        {{ form.fin(class='btn btn-sm btn-success rounded-pill') }}#}
                                     </div>
                                 </div>
                             </div>
