--- a/root/templates/includes/navigation.html
+++ b/root/templates/includes/navigation.html
@@ -1,19 +1,19 @@
 
 <header class="header header-sticky mb-4">
-        <div class="container-fluid">
+    <div class="container-fluid">
           <button class="header-toggler px-md-0 me-md-3" type="button" onclick="coreui.Sidebar.getInstance(document.querySelector('#sidebar')).toggle()">
             <svg class="icon icon-lg">
               <use xlink:href="/static/assets/vendors/@coreui/icons/svg/free.svg#cil-menu"></use>
             </svg>
           </button><a class="header-brand d-md-none" href="#">
-            <svg width="118" height="46" alt="CoreUI Logo">
+            <svg width="118" height="46" >
               <use xlink:href="/static/assets/brand/coreui.svg#full"></use>
             </svg></a>
-          <ul class="header-nav d-none d-md-flex">
-            <li class="nav-item"><a class="nav-link" href="#">Dashboard</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Users</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Settings</a></li>
-          </ul>
+{#          <ul class="header-nav d-none d-md-flex">#}
+{#            <li class="nav-item"><a class="nav-link" href="#">Dashboard</a></li>#}
+{#            <li class="nav-item"><a class="nav-link" href="#">Users</a></li>#}
+{#            <li class="nav-item"><a class="nav-link" href="#">Settings</a></li>#}
+{#          </ul>#}
           <ul class="header-nav ms-auto">
             <li class="nav-item"><a class="nav-link" href="#">
                 <svg class="icon icon-lg">
@@ -30,7 +30,7 @@
           </ul>
           <ul class="header-nav ms-3">
             <li class="nav-item dropdown"><a class="nav-link py-0" data-coreui-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                <div class="avatar avatar-md"><img class="avatar-img" src="/static/assets/img/avatars/8.jpg" alt="user@email.com"></div>
+{#                <div class="avatar avatar-md"><img class="avatar-img" src="/static/assets/img/avatars/8.jpg" alt="user@email.com"></div>#}
               </a>
               <div class="dropdown-menu dropdown-menu-end pt-0">
                 <div class="dropdown-header bg-light py-2">
@@ -51,16 +51,16 @@
             </li>
           </ul>
         </div>
-        <div class="header-divider"></div>
-        <div class="container-fluid">
-          <nav aria-label="breadcrumb">
-            <ol class="breadcrumb my-0 ms-2">
-              <li class="breadcrumb-item">
-                <!-- if breadcrumb is single--><span>Home</span>
-              </li>
-              <li class="breadcrumb-item active"><span>Dashboard</span></li>
-            </ol>
-          </nav>
-        </div>
-      </header>
+{#        <div class="header-divider"></div>#}
+{#        <div class="container-fluid">#}
+{#          <nav aria-label="breadcrumb">#}
+{#            <ol class="breadcrumb my-0 ms-2">#}
+{#              <li class="breadcrumb-item">#}
+{#                <!-- if breadcrumb is single--><span>Home</span>#}
+{#              </li>#}
+{#              <li class="breadcrumb-item active"><span>Dashboard</span></li>#}
+{#            </ol>#}
+{#          </nav>#}
+{#        </div>#}
+  </header>
       
