--- a/root/templates/layouts/base.html
+++ b/root/templates/layouts/base.html
@@ -29,7 +29,9 @@
   </head>
       <body>
 
-        {% include 'includes/sidebar.html' %}
+        {% block sidebar %}
+        	
+        {% endblock %}
 
         <div class="wrapper d-flex flex-column min-vh-100 bg-light">
 
