--- a/root/templates/admin/payment_pdf.html
+++ b/root/templates/admin/payment_pdf.html
@@ -1,10 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
+{#    <title>Bon de commande {{ object['intern_reference'] }}</title>#}
     <meta charset="UTF-8">
-    <title>Title</title>
+    <style>
+        @font-face {
+            font-family: LibreBaskerville-Regular;
+            src: url('{{ url_for('static', filename="webfonts/LibreBaskerville-Regular.ttf") }}');
+        }
+        @font-face {
+            font-family: LibreBaskerville-Italic;
+            src: url('{{ url_for('static', filename="webfonts/LibreBaskerville-Italic.ttf") }}');
+        }
+        @font-face {
+            font-family: LibreBaskerville-Bold;
+            src: url('{{ url_for('static', filename="webfonts/LibreBaskerville-Bold.ttf") }}');
+        }
+        @page {
+            size: A5 landscape;
+            margin: 1cm;
+        }
+        body{
+            font-family: LibreBaskerville-Regular, 'Times New Roman', Times, serif;
+        }
+        img{
+            width: 150px;
+            height: 80px;
+        }
+        table{
+
+            width: 100%;
+            border-collapse: collapse;
+            font-size: 12px;
+        }
+
+        .bordered tr td, .bordered tr th{
+            border-collapse: collapse;
+            text-align: center;
+        }
+        td{
+            padding-top: .5em ;
+        }
+
+        span{
+            font-weight: bolder;
+            font-family: LibreBaskerville-Bold, 'Times New Roman', Times, serif;
+            padding: .5em;
+        }
+
+        .title2{
+            text-align: center;
+            font-weight: bolder;
+            font-family: LibreBaskerville-Bold, 'Times New Roman', Times, serif  ;
+            font-size: 20px;
+            text-decoration: underline;
+        }
+   </style>
+
 </head>
 <body>
+    <table>
+        <tr class="title2"><td colspan="3">Reçu de versement/paiement</td></tr>
+        <tr><td>
+                <span>Client:</span>
+                {{ responsible_group }}</td></tr>
+        <tr>
+            <td><span>DATE:</span> {{ today }}</td>
+            <td></td>
+    </table>
+    <table>
+        <tr>
+            <td>
+    Je soussigné(e) Mr {{ current_employee }}, reconnais avoir reçu le {{ today }}, la somme de
+    {{ cost_paid }} , de la part de Mr {{ responsable_group }}, correspondant aux services suivants : frais de voyage à {{ destination }}
+
+    Le paiement a été reçu sous la forme de <b>espèce</b>.
+
+    Fait pour valoir ce que de droit.
+
+
+    <div style="width:90%; position: relative; padding-top: 10%; text-align: right;">
+        <span>Prénom, nom et signature</span>
+    </div>
+            </td>
+        </tr>
+        <tr>
+            <td><p>Arrêté la présente souscription  à la somme de: <b> {{ total_letters }}</b></p> </td>
+        </tr>
+    </table>
 
 </body>
 </html>
