--- a/root/templates/admin/guides.html
+++ b/root/templates/admin/guides.html
@@ -50,7 +50,7 @@
 {% endblock %}
 {% block javascripts %}
 {#    <script src="https://cdn.jsdelivr.net/npm/gridjs@6.2.0/dist/gridjs.production.min.js"></script>#}
-    <script src="{{ url_for('static', filename='gridjs/dist/gridjs.production.min.js') }}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gridjs@6.2.0/dist/gridjs.production.min.js"></script>
     <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/toasts.js') }}"></script>
     <script>
