--- a/root/templates/admin/voyage_subscriptions.html
+++ b/root/templates/admin/voyage_subscriptions.html
@@ -56,7 +56,7 @@
     </div>
 {% endblock %}
 {% block javascripts %}
-    <script src="{{ url_for('static', filename='gridjs/dist/gridjs.production.min.js') }}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gridjs@6.2.0/dist/gridjs.production.min.js"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
     <script>
         $(document).ready(function (){
